NBLCE-69 Fix parent BS4 scss path

--- a/custom/themes/nblce_lib_unb_ca/src/scss/_import.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/_import.scss
@@ -2,7 +2,7 @@
 @import 'overrides/variables';
 
 // Include parent theme with all things Bootstrap for full override.
-@import '../../../../../vendor/drupal/bootstrap4/dist/bootstrap/4.4.1/scss/bootstrap';
+@import '../../../../../vendor/drupal/bootstrap4/scss/style';
 
 // Include custom sub theme.
 @import 'custom/variables';
