NBLCE-69 Create mobile-friendly,accessible header w/dropdown nav menu support

--- a/custom/themes/nblce_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/style.scss
@@ -24,3 +24,83 @@ h1 {
   margin-bottom: 1rem;
   text-transform: uppercase;
 }
+
+/* Header: branding & main nav */
+header {
+  nav {
+    .navbar-nav {
+      .dropdown-menu {
+        background: $primary;
+        padding: 0;
+        position: absolute;
+
+        li {
+          margin: .2rem;
+        }
+
+        .dropdown-item {
+          color: $white;
+
+          &:focus,
+          &:active {
+            background: $bg-focus;
+            color: $primary-dark;
+          }
+
+          &.active {
+            background: #fdfaf7;
+            cursor: default;
+          }
+
+          &.active,
+          &:hover {
+            color: $primary-dark;
+          }
+        }
+      }
+
+      .dropdown-menu-right {
+        margin-top: .2rem;
+        right: -.2rem;
+      }
+
+      .nav-link {
+        color: $primary-dark;
+        font-size: 1.5rem;
+        font-weight: bold;
+        line-height: 1.4rem;
+        text-transform: uppercase;
+
+        &.active,
+        &:focus,
+        &:hover {
+          color: $primary;
+        }
+      }
+
+      /* Invert border carat */
+      .show {
+        .dropdown-toggle::after {
+          border-top: 0;
+          border-bottom: 0.3em solid;
+        }
+      }
+    }
+  }
+
+  .navbar-brand {
+    padding: 0;
+  }
+
+  .region-nav-main {
+    width: 100%;
+  }
+
+  @media screen and (max-width: 767px) {
+    nav {
+      .navbar-nav .nav-link {
+        font-size: 1.2rem;
+      }
+    }
+  }
+}
