NBLCE-69 Update Sidebar first / Content mobile region order

--- a/custom/themes/nblce_lib_unb_ca/src/scss/_import.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/_import.scss
@@ -6,6 +6,7 @@
 
 // Include custom sub theme.
 @import 'custom/variables';
+@import 'custom/content_sidebar';
 
 // Include custom sub theme.
 //@import 'custom/mixins/misc';
