--- a/custom/themes/nblce_lib_unb_ca/src/scss/custom/_content_sidebar.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/custom/_content_sidebar.scss
@@ -43,6 +43,14 @@
           a {
             font-size: 1rem;
             padding: .25rem;
+
+            &.is-active {
+              color: $primary;
+
+              &:hover {
+                cursor: default;
+              }
+            }
           }
         }
       }
