NBLCE-69 Post BS4 update: match branding/navbar responsive behaviour w/ main content

--- a/custom/themes/nblce_lib_unb_ca/templates/block--system-branding-block.html.twig
+++ b/custom/themes/nblce_lib_unb_ca/templates/block--system-branding-block.html.twig
@@ -14,7 +14,7 @@
  */
 #}
 {% block content %}
-  <a href="{{ path('<front>') }}" title="{{ 'Home'|t }}" rel="home" class="align-items-center d-flex navbar-brand">
+  <a href="{{ path('<front>') }}" title="{{ 'Home'|t }}" rel="home" class="align-items-center d-inline-block navbar-brand">
     {% if site_logo %}
       <img src="{{ site_logo }}" alt="{{ 'NBLCE'|t }}" class="img-fluid" />
     {% endif %}
