NBLCE-69 Uppercase sidebar text for dropdown toggle links

--- a/custom/themes/nblce_lib_unb_ca/src/scss/custom/_content_sidebar.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/custom/_content_sidebar.scss
@@ -30,6 +30,7 @@
         }
 
         &.dropdown-toggle {
+          text-transform: uppercase;
           white-space: normal;
         }
       }
