NBLCE-69 Darken sidebar headings

--- a/custom/themes/nblce_lib_unb_ca/src/scss/custom/_content_sidebar.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/custom/_content_sidebar.scss
@@ -9,6 +9,7 @@
     font-weight: bold;
     margin: 1rem 0;
     text-align: center;
+    text-shadow: 0 0 1px;
     text-transform: uppercase;
   }
 
@@ -30,6 +31,7 @@
         }
 
         &.dropdown-toggle {
+          text-shadow: 0 0 1px;
           text-transform: uppercase;
           white-space: normal;
         }
