--- a/custom/themes/nblce_lib_unb_ca/templates/html.html.twig
+++ b/custom/themes/nblce_lib_unb_ca/templates/html.html.twig
@@ -45,9 +45,9 @@
     <link rel="manifest" href="/themes/custom/nblce_lib_unb.ca/site.webmanifest">
     <link rel="mask-icon" href="/themes/custom/nblce_lib_unb.ca/safari-pinned-tab.svg" color="#ba6128">
     <link rel="shortcut icon" href="/themes/custom/nblce_lib_unb.ca/favicon.ico">
-    <meta name="msapplication-TileColor" content="#ba6128">
+    <meta name="msapplication-TileColor" content="#fbf6ed">
     <meta name="msapplication-config" content="/themes/custom/nblce_lib_unb.ca/browserconfig.xml">
-    <meta name="theme-color" content="#ba6128">
+    <meta name="theme-color" content="#fbf6ed">
     {# End favicon code #}
     <head-placeholder token="{{ placeholder_token }}">
     <title>{{ head_title|safe_join(' | ') }}</title>
