--- a/custom/themes/nblce_lib_unb_ca/templates/menu--modules-content.html.twig
+++ b/custom/themes/nblce_lib_unb_ca/templates/menu--modules-content.html.twig
@@ -44,6 +44,10 @@
       {%
         set classes_link = [
           'nav-link',
+          'py-2',
+          'py-lg-1',
+          'text-left',
+          'text-lg-center',
           item.is_expanded ? 'dropdown-toggle',
           item.is_collapsed ? 'dropdown-toggle',
           item.in_active_trail ? 'active',
