--- a/custom/themes/nblce_lib_unb_ca/templates/block--system-menu-block.html.twig
+++ b/custom/themes/nblce_lib_unb_ca/templates/block--system-menu-block.html.twig
@@ -47,7 +47,7 @@
     {% set title_attributes = title_attributes.addClass('visually-hidden') %}
   {% endif %}
   {{ title_prefix }}
-  <h5{{ title_attributes.setAttribute('id', heading_id) }}>{{ configuration.label }}</h5>
+  <h2{{ title_attributes.setAttribute('id', heading_id).addCLass('h5') }}>{{ configuration.label }}</h2>
   {{ title_suffix }}
 
   {# Menu. #}
