NBLCE-69 Add Montserrat Googlefont, add/use font variables, font-size adjustments

--- a/custom/themes/nblce_lib_unb_ca/src/scss/custom/_variables.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/custom/_variables.scss
@@ -3,3 +3,5 @@ $bg-light: #fbf6ed;
 $bg-focus: #ebf5ff;
 $primary: #ba6128;
 $primary-dark: #4d371d;
+$text-font-family: 'Montserrat', Helvetica, Arial, sans-serif;
+$header-font-family: 'PT Sans', Arial, sans-serif;
