NBLCE-69 Use BS4 'text-dark' default text color

--- a/custom/themes/nblce_lib_unb_ca/templates/html.html.twig
+++ b/custom/themes/nblce_lib_unb_ca/templates/html.html.twig
@@ -31,7 +31,7 @@
     db_offline ? 'db-offline',
     (b4_body_schema != 'none' ? (b4_body_schema == 'dark' ? ' text-light' : ' text-dark' ) : ' '),
     (b4_body_bg_schema != 'none' ? " bg-#{b4_body_bg_schema}" : ' '),
-    'd-flex flex-column h-100'
+    'd-flex flex-column h-100 text-dark'
   ]
 %}
 
