NBLCE-70 Small-width sidebar menu: collapse/expand slide

--- a/custom/themes/nblce_lib_unb_ca/src/scss/custom/_content_sidebar.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/custom/_content_sidebar.scss
@@ -77,17 +77,10 @@ nav#block-modulescontent {
     }
   }
 }
-@media (max-width: 991px) {
-  #accordian {
-    margin-top: 1rem;
 
-    &:not(.show) {
-      display: none;
-    }
-  }
-}
+/* Force large-width sidebar menu show */
 @media (min-width: 992px) {
-  #accordian:not(.show) {
+  #modules-menu-wrapper:not(.show) {
     display: block;
   }
 }
