--- a/custom/themes/nblce_lib_unb_ca/templates/block--system-menu-block--modules-content.html.twig
+++ b/custom/themes/nblce_lib_unb_ca/templates/block--system-menu-block--modules-content.html.twig
@@ -1,5 +1,6 @@
 {%
     set classes = [
+    'accordion',
     'block',
     'block-menu',
     'navigation',
@@ -17,8 +18,8 @@
     {{ title_prefix }}
     <h2{{ title_attributes.setAttribute('id', heading_id) }} class="d-none d-lg-block h5 my-2 my-lg-3 text-lg-center">{{ configuration.label }}</h2>
     <h2{{ title_attributes.setAttribute('id', heading_id) }} class="d-block d-lg-none h5 my-2 my-lg-3 text-left"
-            data-toggle="collapse" data-target="#accordian"
-            aria-controls="accordian" aria-expanded="false" aria-label="Toggle sidebar navigation">{{ configuration.label }}</h2>
+            data-toggle="collapse" data-target="#modules-menu-wrapper"
+            aria-controls="modules-menu-wrapper" aria-expanded="false" aria-label="Toggle sidebar navigation">{{ configuration.label }}</h2>
     {{ title_suffix }}
 
     {# Menu. #}
