--- a/custom/themes/nblce_lib_unb_ca/templates/menu--modules-content.html.twig
+++ b/custom/themes/nblce_lib_unb_ca/templates/menu--modules-content.html.twig
@@ -29,8 +29,9 @@
 {% macro menu_links(items, attributes, menu_level, menu_item) %}
   {% import _self as menus %}
   {% if items %}
+  <div class="collapse" id="modules-menu-wrapper" data-parent="#block-modulescontent">
     {% if menu_level == 0 %}
-      <ul class="nav navbar-nav" id="accordian">
+      <ul class="nav navbar-nav" id="modules-menu">
     {% else %}
       {% set show_sub_menu = false %}
       {% for item in items %}
@@ -38,7 +39,7 @@
           {% set show_sub_menu = true %}
         {% endif %}
       {% endfor %}
-      <ul id="item{{ menu_item }}" class="collapse{{ show_sub_menu ? ' show' }}" data-parent="#accordian">
+      <ul id="item{{ menu_item }}" class="collapse{{ show_sub_menu ? ' show' }}" data-parent="#modules-menu">
     {% endif %}
     {% for item in items %}
       {%
@@ -74,4 +75,5 @@
     {% endfor %}
     </ul>
   {% endif %}
+  </div>
 {% endmacro %}
