NBLCE-69 Add h3 rules

--- a/custom/themes/nblce_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/style.scss
@@ -22,6 +22,12 @@ h2,
   font-size: 1.5rem;
   font-weight: bold;
 }
+h3,
+.h3 {
+  color: $primary;
+  font-size: 1.25rem;
+  font-weight: bold;
+}
 
 a {
   color: $primary;
