NBLCE-69 Override stock BS4 link focus w/ more subtle effect

--- a/custom/themes/nblce_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/style.scss
@@ -36,7 +36,10 @@ a {
   &:focus,
   &:hover {
     background: inherit;
+    box-shadow: none;
     color: $primary-dark;
+    outline: 1px dashed #d6d6d6;
+    outline-offset: 1px;
     text-decoration: underline;
   }
 }
