NBLCE-69 Update header navbar,  link focus

--- a/custom/themes/nblce_lib_unb_ca/src/scss/custom/_variables.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/custom/_variables.scss
@@ -1,6 +1,6 @@
 // Define new variables.
 $bg-light: #fbf6ed;
-$bg-focus: #ebf5ff;
+$bg-focus: $bg-light;
 $primary: #ba6128;
 $primary-dark: #4d371d;
 $text-font-family: 'Montserrat', Helvetica, Arial, sans-serif;
