NBLCE-69 Add vars/extract header rules to separate custom scss file

--- a/custom/themes/nblce_lib_unb_ca/src/scss/_import.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/_import.scss
@@ -4,10 +4,8 @@
 // Include parent theme with all things Bootstrap for full override.
 @import '../../../../../vendor/drupal/bootstrap4/scss/style';
 
-// Include custom sub theme.
+// Include custom sub theme rules.
 @import 'custom/variables';
+@import 'custom/header';
 @import 'custom/content_sidebar';
 
-// Include custom sub theme.
-//@import 'custom/mixins/misc';
-//@import 'custom/misc';
