--- a/custom/themes/nblce_lib_unb_ca/src/scss/custom/_variables.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/custom/_variables.scss
@@ -1,6 +1,7 @@
 // Define new variables.
 $bg-light: #fbf6ed;
-$bg-focus: $bg-light;
+$bg-nav-active: $bg-light;
+$bg-nav-focus: #ffd8a8;
 $primary: #ba6128;
 $primary-dark: #4d371d;
 $text-font-family: 'Montserrat', Helvetica, Arial, sans-serif;
