NBLCE-71 Modules sidebar improvements

--- a/custom/themes/nblce_lib_unb_ca/templates/menu--modules-content.html.twig
+++ b/custom/themes/nblce_lib_unb_ca/templates/menu--modules-content.html.twig
@@ -31,7 +31,7 @@
   {% if items %}
   <div class="collapse" id="modules-menu-wrapper" data-parent="#block-modulescontent">
     {% if menu_level == 0 %}
-      <ul class="nav navbar-nav" id="modules-menu">
+      <ul class="nav navbar-nav p-2" id="modules-menu">
     {% else %}
       {% set show_sub_menu = false %}
       {% for item in items %}
