NBLCE-69 Fix subtheme footer settings/classes implementation

--- a/custom/themes/nblce_lib_unb_ca/templates/page.html.twig
+++ b/custom/themes/nblce_lib_unb_ca/templates/page.html.twig
@@ -50,10 +50,10 @@ set nav_classes = 'navbar navbar-expand-lg' ~
 %}
 
 {%
-set footer_classes = '' ~ 
-  (b4_footer_schema != 'none' ? " navbar-#{b4_footer_schema}" : ' ') ~
-  (b4_footer_schema != 'none' ? (b4_footer_schema == 'dark' ? ' text-light' : ' text-dark' ) : ' ') ~
-  (b4_footer_bg_schema != 'none' ? " bg-#{b4_footer_bg_schema}" : ' ')
+set footer_classes = 'mt-auto' ~
+  (b4_footer_schema != 'none' ? " navbar-#{b4_footer_schema}") ~
+  (b4_footer_schema != 'none' ? (b4_footer_schema == 'dark' ? ' text-light' : ' text-dark' )) ~
+  (b4_footer_bg_schema != 'none' ? " bg-#{b4_footer_bg_schema}")
 %}
 
 <header class="container py-2 py-sm-4">
@@ -113,7 +113,7 @@ set footer_classes = '' ~
 </main>
 
 {% if page.footer %}
-<footer class="mt-auto {{ footer_classes }}">
+<footer class="{{ footer_classes }}">
   <div class="{{ b4_top_container }}">
     {{ page.footer }}
   </div>
