NBLCE-69 Left align navbar menu with content region

--- a/custom/themes/nblce_lib_unb_ca/templates/page.html.twig
+++ b/custom/themes/nblce_lib_unb_ca/templates/page.html.twig
@@ -65,7 +65,7 @@ set footer_classes = 'mt-auto' ~
         {{ page.nav_branding }}
       </div>
 
-      <div class="navbar col-7 col-sm-6 col-lg-9 pb-lg-4">
+      <div class="navbar col-7 col-sm-6 col-lg-9 pb-lg-4 pl-lg-3">
         {{ page.nav_main }}
       </div>
       {{ page.nav_additional }}
