NBLCE-69 Add custom copyright to Footer region, apply BS4 padding

--- a/custom/themes/nblce_lib_unb_ca/templates/page.html.twig
+++ b/custom/themes/nblce_lib_unb_ca/templates/page.html.twig
@@ -50,7 +50,7 @@ set nav_classes = 'navbar navbar-expand-lg' ~
 %}
 
 {%
-set footer_classes = 'mt-auto' ~
+set footer_classes = 'mt-auto py-4' ~
   (b4_footer_schema != 'none' ? " navbar-#{b4_footer_schema}") ~
   (b4_footer_schema != 'none' ? (b4_footer_schema == 'dark' ? ' text-light' : ' text-dark' )) ~
   (b4_footer_bg_schema != 'none' ? " bg-#{b4_footer_bg_schema}")
@@ -116,6 +116,11 @@ set footer_classes = 'mt-auto' ~
 <footer class="{{ footer_classes }}">
   <div class="{{ b4_top_container }}">
     {{ page.footer }}
+  </div>
+  <div class="container">
+    <div class="text-center">
+      &copy; {{ 'now'|date('Y') }} Tony Tremblay. {{ 'All rights reserved'|t }}.
+    </div>
   </div>
 </footer>
 {% endif %}
