--- a/custom/themes/nblce_lib_unb_ca/templates/block--system-menu-block--modules-content.html.twig
+++ b/custom/themes/nblce_lib_unb_ca/templates/block--system-menu-block--modules-content.html.twig
@@ -15,8 +15,8 @@
         {% set title_attributes = title_attributes.addClass('visually-hidden') %}
     {% endif %}
     {{ title_prefix }}
-    <h2{{ title_attributes.setAttribute('id', heading_id) }} class="d-none d-lg-block h5 my-2 my-lg-3 px-2 text-lg-center">{{ configuration.label }}</h2>
-    <h2{{ title_attributes.setAttribute('id', heading_id) }} class="d-block d-lg-none h5 my-0 my-lg-3 p-2 text-left bg-dark-alt text-white"
+    <h2{{ title_attributes.setAttribute('id', heading_id) }} class="d-none d-lg-block h5 my-2 mt-lg-3 px-2 text-lg-center">{{ configuration.label }}</h2>
+    <h2{{ title_attributes.setAttribute('id', heading_id) }} class="d-block d-lg-none h5 my-0 p-2 text-left bg-dark-alt text-white"
             data-toggle="collapse" data-target="#modules-menu-wrapper"
             aria-controls="modules-menu-wrapper" aria-expanded="false" aria-label="Toggle sidebar navigation">{{ configuration.label }}</h2>
     {{ title_suffix }}
