NBLCE-69 Decrease smaller-width device sidebar menu font-size

--- a/custom/themes/nblce_lib_unb_ca/src/scss/custom/_content_sidebar.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/custom/_content_sidebar.scss
@@ -84,3 +84,12 @@ nav#block-modulescontent {
     display: block;
   }
 }
+
+/* Help reduce line break re: toggle icons */
+@media (max-width: 1199px) {
+  #modules-menu-wrapper {
+    .nav-link {
+      font-size: .9rem;
+    }
+  }
+}
