--- a/custom/themes/nblce_lib_unb_ca/src/scss/custom/_header.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/custom/_header.scss
@@ -53,7 +53,7 @@ header {
 
       /* Invert border carat */
       .show {
-        .dropdown-toggle::after {
+        .dropdown-toggle:after {
           border-top: 0;
           border-bottom: 0.3em solid;
         }
@@ -63,7 +63,13 @@ header {
 
   .navbar-brand {
     margin-right: 0;
-    padding-right: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+
+    img {
+      /* Upscale until better source img supplied */
+      width: 255px;
+    }
   }
 
   .navbar {
@@ -77,7 +83,7 @@ header {
   @media screen and (max-width: 767px) {
     nav {
       .navbar-nav .nav-link {
-        font-size: 1.1rem;
+        font-size: 1rem;
       }
     }
   }
