--- a/custom/themes/nblce_lib_unb_ca/src/scss/_import.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/_import.scss
@@ -8,4 +8,5 @@
 @import 'custom/variables';
 @import 'custom/content_sidebar';
 @import 'custom/header';
+@import 'overrides/node_preview';
 @import 'overrides/skip_link';
