NBLCE-55 Custom BS4 alert improvements

--- a/custom/themes/nblce_lib_unb_ca/src/scss/_import.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/_import.scss
@@ -8,5 +8,6 @@
 @import 'custom/variables';
 @import 'custom/content_sidebar';
 @import 'custom/header';
+@import 'overrides/alert';
 @import 'overrides/node_preview';
 @import 'overrides/skip_link';
