NBLCE-69 custom region block styles, accessibility improvements

--- a/custom/themes/nblce_lib_unb_ca/src/scss/custom/_content_sidebar.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/custom/_content_sidebar.scss
@@ -1,5 +1,6 @@
 nav#block-modulescontent {
-  border: 3px solid $primary-dark;
+  background-color: $bg-shaded;
+  border: $border-width solid $primary-dark;
   font-family: $header-font-family;
 
   h2 {
@@ -65,7 +66,7 @@ nav#block-modulescontent {
             padding: .25rem;
 
             &.is-active {
-              color: $primary;
+              color: $active-link;
 
               &:hover {
                 cursor: default;
