--- a/custom/themes/nblce_lib_unb_ca/src/scss/custom/_header.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/custom/_header.scss
@@ -47,7 +47,7 @@ header {
         &.active,
         &:focus,
         &:hover {
-          color: $primary;
+          color: $active-link;
         }
       }
 
