--- a/custom/themes/nblce_lib_unb_ca/src/scss/custom/_variables.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/custom/_variables.scss
@@ -1,7 +1,11 @@
 // Define new variables.
-$bg-light: #fbf6ed;
+$active-link: #ad5925;
+$alert-link: #2b1225;
+$bg-light: #fdfaf6;
+$bg-shaded: #fbf6ed;
 $bg-nav-active: $bg-light;
 $bg-nav-focus: #ffd8a8;
+$border-width: 2px;
 $primary: #ba6128;
 $primary-dark: #4d371d;
 $text-font-family: 'Montserrat', Helvetica, Arial, sans-serif;
