--- a/custom/themes/nblce_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/style.scss
@@ -68,6 +68,18 @@ article {
   }
 }
 
+header {
+  background-color: $bg-shaded;
+  border-bottom: 1px solid $primary-dark;
+  box-shadow: 0 0 $border-width $primary-dark;
+}
+
+footer {
+  background-color: $bg-shaded;
+  border-top: 1px solid $primary-dark;
+  box-shadow: 0 0 $border-width $primary-dark;
+}
+
 /* Misc */
 .bg-dark-alt {
   background-color: $primary-dark;
