--- a/custom/themes/nblce_lib_unb_ca/templates/page.html.twig
+++ b/custom/themes/nblce_lib_unb_ca/templates/page.html.twig
@@ -50,7 +50,7 @@ set nav_classes = 'navbar navbar-expand-lg' ~
 %}
 
 {%
-set footer_classes = 'mt-auto py-4' ~
+set footer_classes = 'mt-auto py-2' ~
   (b4_footer_schema != 'none' ? " navbar-#{b4_footer_schema}") ~
   (b4_footer_schema != 'none' ? (b4_footer_schema == 'dark' ? ' text-light' : ' text-dark' )) ~
   (b4_footer_bg_schema != 'none' ? " bg-#{b4_footer_bg_schema}")
@@ -119,8 +119,18 @@ set footer_classes = 'mt-auto py-4' ~
     {{ page.footer }}
   </div>
   <div class="container">
-    <div class="text-center">
-      &copy; {{ 'now'|date('Y') }} Tony Tremblay. {{ 'All rights reserved'|t }}.
+    <div class="row align-items-center py-2 text-black" role=”contentinfo”>
+      <div class="col-12 col-md-4 col-lg-3 text-center text-md-left">
+        <a class="d-inline-block" href="//lib.unb.ca" target="_blank">
+          <img alt="UNB Libraries" class="img-fluid" src="/{{ directory }}/dist/img/unb-libraries-black-sm.png">
+        </a>
+      </div>
+      <div class="col-12 col-md-8 col-lg-9 my-3 my-md-0 text-center text-md-right">
+        <span>&copy; {{ 'now'|date('Y') }} Tony Tremblay. {{ 'All rights reserved'|t }}.</span>
+      </div>
+      {% if page.footer %}
+        {{ page.footer }}
+      {% endif %}
     </div>
   </div>
 </footer>
