NBLCE-62 Fix theme path (.ca -> _ca)

--- a/custom/themes/nblce_lib_unb_ca/templates/html.html.twig
+++ b/custom/themes/nblce_lib_unb_ca/templates/html.html.twig
@@ -39,14 +39,14 @@
 <html{{ html_attributes.addClass('h-100') }}>
   <head>
     {# Begin generated favicon code (https://realfavicongenerator.net) #}
-    <link rel="apple-touch-icon" sizes="180x180" href="/themes/custom/nblce_lib_unb.ca/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/themes/custom/nblce_lib_unb.ca/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/themes/custom/nblce_lib_unb.ca/favicon-16x16.png">
-    <link rel="manifest" href="/themes/custom/nblce_lib_unb.ca/site.webmanifest">
-    <link rel="mask-icon" href="/themes/custom/nblce_lib_unb.ca/safari-pinned-tab.svg" color="#ba6128">
-    <link rel="shortcut icon" href="/themes/custom/nblce_lib_unb.ca/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/themes/custom/nblce_lib_unb_ca/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/themes/custom/nblce_lib_unb_ca/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/themes/custom/nblce_lib_unb_ca/favicon-16x16.png">
+    <link rel="manifest" href="/themes/custom/nblce_lib_unb_ca/site.webmanifest">
+    <link rel="mask-icon" href="/themes/custom/nblce_lib_unb_ca/safari-pinned-tab.svg" color="#ba6128">
+    <link rel="shortcut icon" href="/themes/custom/nblce_lib_unb_ca/favicon.ico">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-config" content="/themes/custom/nblce_lib_unb.ca/browserconfig.xml">
+    <meta name="msapplication-config" content="/themes/custom/nblce_lib_unb_ca/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
     {# End favicon code #}
     <head-placeholder token="{{ placeholder_token }}">
