--- a/custom/themes/nblce_lib_unb_ca/templates/page.html.twig
+++ b/custom/themes/nblce_lib_unb_ca/templates/page.html.twig
@@ -56,7 +56,7 @@ set footer_classes = 'mt-auto py-2' ~
   (b4_footer_bg_schema != 'none' ? " bg-#{b4_footer_bg_schema}")
 %}
 
-<header class="pt-2 pb-1">
+<header class="py-2">
   <div class="container">
   {{ page.header }}  
 
