--- a/custom/themes/nblce_lib_unb_ca/templates/page.html.twig
+++ b/custom/themes/nblce_lib_unb_ca/templates/page.html.twig
@@ -119,7 +119,7 @@ set footer_classes = 'mt-auto py-2' ~
     {{ page.footer }}
   </div>
   <div class="container">
-    <div class="row align-items-center py-2 text-black" role=”contentinfo”>
+    <div class="row align-items-center py-2 text-black" role="contentinfo">
       <div class="col-12 col-md-4 col-lg-3 text-center text-md-left">
         <a class="d-inline-block" href="//lib.unb.ca" target="_blank">
           <img alt="UNB Libraries" class="img-fluid" src="/{{ directory }}/dist/img/unb-libraries-black-sm.png">
