NBLCE-69 Add default whitespace to blockquote tag

--- a/custom/themes/nblce_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/style.scss
@@ -74,6 +74,10 @@ header {
   box-shadow: 0 0 $border-width $primary-dark;
 }
 
+blockquote {
+  margin: 1rem 3rem;
+}
+
 footer {
   background-color: $bg-shaded;
   border-top: 1px solid $primary-dark;
