NBLCE-89 Add custom styles for 'Styles' CKEditor button

--- a/custom/themes/nblce_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/style.scss
@@ -88,3 +88,12 @@ footer {
 .bg-dark-alt {
   background-color: $primary-dark;
 }
+.indent-lg {
+  margin-left: 9rem;
+}
+.subtitle {
+  display: block;
+  font-size: smaller;
+  font-style: italic;
+  font-weight: normal;
+}
