--- a/custom/themes/nblce_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/style.scss
@@ -6,8 +6,9 @@ body {
   font-family: $text-font-family;
   font-size: 1rem;
 }
-h1, h2, h3 {
+h1, h2, h3, h4 {
   font-family: $header-font-family;
+  margin-bottom: 1rem;
 }
 h1 {
   color: $primary;
@@ -26,6 +27,12 @@ h3,
 .h3 {
   color: $primary;
   font-size: 1.25rem;
+  font-weight: bold;
+}
+h4,
+.h4 {
+  color: $primary;
+  font-size: 1.1rem;
   font-weight: bold;
 }
 
