NBLCE-98 Override CKEditor Toolbar dropdown styles to improve UI

--- a/custom/themes/nblce_lib_unb_ca/src/scss/_import.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/_import.scss
@@ -9,5 +9,6 @@
 @import 'custom/content_sidebar';
 @import 'custom/header';
 @import 'overrides/alert';
+@import 'overrides/ckeditor';
 @import 'overrides/node_preview';
 @import 'overrides/skip_link';
