--- a/custom/themes/nblce_lib_unb_ca/src/scss/overrides/_ckeditor.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/overrides/_ckeditor.scss
@@ -1,4 +1,21 @@
+.cke_editable {
+  background: inherit;
+}
 .cke_panel_listItem {
+  background: $white;
+  color: $black;
+
+  a {
+    &:focus,
+    &:hover {
+      text-decoration: none;
+    }
+  }
+  h2, h3, h4, h5, h6 {
+    background: inherit;
+    color: inherit;
+  }
+
   span {
     &.ml-3,
     &.ml-5,
