NBLCE-69 Add style rules for h5/h6

--- a/custom/themes/nblce_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/style.scss
@@ -6,34 +6,28 @@ body {
   font-family: $text-font-family;
   font-size: 1rem;
 }
-h1, h2, h3, h4 {
+h1, h2, h3, h4, h5, h6 {
+  color: $primary;
   font-family: $header-font-family;
+  font-weight: bold;
   margin-bottom: 1rem;
 }
 h1 {
-  color: $primary;
   font-size: 2rem;
-  font-weight: bold;
-  margin-bottom: 1rem;
 }
 
-h2,
-.h2 {
-  color: $primary;
+h2, .h2 {
   font-size: 1.5rem;
-  font-weight: bold;
 }
-h3,
-.h3 {
-  color: $primary;
+h3, .h3 {
   font-size: 1.25rem;
-  font-weight: bold;
 }
-h4,
-.h4 {
-  color: $primary;
+h4, .h4 {
   font-size: 1.1rem;
-  font-weight: bold;
+}
+h5, .h5,
+h6, .h6 {
+  font-size: 1rem;
 }
 
 a {
