--- a/custom/themes/nblce_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/style.scss
@@ -67,7 +67,16 @@ article {
         margin-top: 1rem;
       }
     }
+
+    li:not(.list-item-compact) {
+      margin-bottom: 1rem;
+    }
+
   }
+}
+
+blockquote {
+  margin: 1rem 3rem;
 }
 
 header {
@@ -76,14 +85,20 @@ header {
   box-shadow: 0 0 $border-width $primary-dark;
 }
 
-blockquote {
-  margin: 1rem 3rem;
-}
-
 footer {
   background-color: $bg-shaded;
   border-top: 1px solid $primary-dark;
   box-shadow: 0 0 $border-width $primary-dark;
+}
+
+ol {
+  &.list-lower-alpha {
+    list-style-type: lower-alpha;
+  }
+
+  &.list-lower-roman {
+    list-style-type: lower-roman;
+  }
 }
 
 /* MISC */
