--- a/custom/themes/nblce_lib_unb_ca/src/scss/overrides/_slick.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/overrides/_slick.scss
@@ -44,7 +44,7 @@
     }
   }
 
-  @media screen and (max-width: 767px) {
+  @media (any-pointer: none) {
     ul.nav {
       display: none!important;
     }
