NBLCE-84 Position active slide indicators right

--- a/custom/themes/nblce_lib_unb_ca/src/scss/overrides/_slick.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/overrides/_slick.scss
@@ -5,8 +5,8 @@
   }
 
   ul.nav {
-    margin-left: .25rem;
-    margin-top: -2rem;
+    margin-right: .25rem;
+    margin-top: -2.25rem;
     margin-bottom: 1.5rem;
 
     li {
