NBLCE-69 Sticky top: sidebar first region

--- a/custom/themes/nblce_lib_unb_ca/src/scss/custom/_content_sidebar.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/custom/_content_sidebar.scss
@@ -1,3 +1,8 @@
+.region-sidebar-first {
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 1.5rem;
+}
 nav#block-modulescontent {
   background-color: $bg-shaded;
   border: $border-width solid $primary-dark;
