NBLCE-69 Vertical align sticky sidebar position w/ TOC bookmarks

--- a/custom/themes/nblce_lib_unb_ca/src/scss/custom/_content_sidebar.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/custom/_content_sidebar.scss
@@ -1,7 +1,7 @@
 .region-sidebar-first {
   position: -webkit-sticky; /* Safari */
   position: sticky;
-  top: 1.5rem;
+  top: .25rem;
 }
 nav#block-modulescontent {
   background-color: $bg-shaded;
